--- a/style.css
+++ b/style.css
@@ -660,13 +660,6 @@ text2 {
 
 /* Container4 end */
 /* Container5 start */
-.jeans-img {
-  /* width: 200px; */
-}
-
-.model-img {
-  /* width: 300px; */
-}
 
 .product-cards {
   display: flex;
@@ -679,9 +672,6 @@ text2 {
   text-align: center;
 }
 
-.product-card img {
-  /* width: 150px; */
-}
 
 
 .btn-9 {
@@ -946,4 +936,42 @@ text2 {
 .dropdown:hover .dropdown-menu {
   display: block;
   margin-top: 0;
+  -webkit-animation: swing-in-top-fwd 0.8s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
+  animation: swing-in-top-fwd 0.8s cubic-bezier(0.175, 0.885, 0.320, 1.275) both;
+}
+
+@-webkit-keyframes swing-in-top-fwd {
+  0% {
+    -webkit-transform: rotateX(-100deg);
+    transform: rotateX(-100deg);
+    -webkit-transform-origin: top;
+    transform-origin: top;
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+    -webkit-transform-origin: top;
+    transform-origin: top;
+    opacity: 1;
+  }
+}
+
+@keyframes swing-in-top-fwd {
+  0% {
+    -webkit-transform: rotateX(-100deg);
+    transform: rotateX(-100deg);
+    -webkit-transform-origin: top;
+    transform-origin: top;
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+    -webkit-transform-origin: top;
+    transform-origin: top;
+    opacity: 1;
+  }
 }
